buffet-app/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: observability
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: public
  tls:
  - hosts:
    - reservation-buffet.ip-ddns.com
    secretName: buffet-app-tls  # Use the existing cert secret
  rules:
  - host: reservation-buffet.ip-ddns.com
    http:
      paths:
      - path: /grafana
        pathType: Prefix
        backend:
          service:
            name: kube-prom-stack-grafana
            port:
              number: 80
